[build-system]
requires = ["setuptools", "wheel", "numpy", "ninja", "torch"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80
exclude = '''
(
  /(
      build
    | tests/stylegan3
  )
)
'''

[tool.isort]
profile = "black"
line_length = 80
skip_glob = ["tests/stylegan3/*"]

[tool.mypy]
files = ["firewood"]
exclude = '''(?x)(
  build
  |firewood/models
  |firewood/trainer/[^/]+$
  |firewood/trainer/gan
  |tests/stylegan3
)'''
show_error_context = "True"
show_column_numbers = "True"
show_error_codes = "True"
warn_no_return = "False"
warn_redundant_casts = "True"
warn_unused_configs = "True"
warn_unused_ignores = "True"
allow_redefinition = "True"
disallow_untyped_defs = "True"
pretty = "True"
follow_imports = "silent"
ignore_missing_imports = "True"

[tool.pytest.ini_options]
addopts = "--cov --cov-config=.coveragerc"
filterwarnings = [
    "ignore:Call to deprecated create function FieldDescriptor",
    "ignore:Call to deprecated create function Descriptor",
    "ignore:Call to deprecated create function EnumDescriptor",
    "ignore:Call to deprecated create function EnumValueDescriptor",
    "ignore:Call to deprecated create function FileDescriptor",
    "ignore:Call to deprecated create function OneofDescriptor",
    "ignore:the imp module is deprecated in favour of importlib",
]
